--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -2,9 +2,10 @@
 
 <!DOCTYPE html>
 
-@main("Test task") {
+@main("Тестовое задание") {
     <ul>
         <li><a href="person">Пациенты</a></li>
         <li><a href="organization">Организации</a></li>
+        <li><a href="attaching">Присоединение</a></li>
     </ul>
 }
